--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "mdi-svelte",
+  "version": "1.0.0",
   "svelte": "src/index.svelte",
   "module": "index.mjs",
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
-    "test": "cd ./test && npm run dev"
+    "test": "echo 'Sorry, no tests'"
   },
   "devDependencies": {
     "rollup": "^1.11.0",
@@ -16,11 +17,26 @@
     "@mdi/js": "^4.1.95"
   },
   "keywords": [
-    "svelte"
+    "svelte",
+    "mdi",
+    "material",
+    "icons"
   ],
   "files": [
     "src",
     "index.mjs",
     "index.js"
-  ]
+  ],
+  "description": "Using [Material Design Icons](https://materialdesignicons.com/) in your Svelte projects.",
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AlexxNB/mdi-svelte.git"
+  },
+  "author": "Alexey Schebelev",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/AlexxNB/mdi-svelte/issues"
+  },
+  "homepage": "https://github.com/AlexxNB/mdi-svelte#readme"
 }
