--- a/demo_src/package.json
+++ b/demo_src/package.json
@@ -20,7 +20,7 @@
     "build": "rollup -c",
     "autobuild": "rollup -c -w",
     "dev": "run-p start:dev autobuild",
-    "start": "sirv dist --single",
-    "start:dev": "sirv __dev --single --dev"
+    "start": "sirv public --single",
+    "start:dev": "sirv public --single --dev"
   }
 }
